<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="vertical"
    tools:context="com.mpm.itdev.fakturmonitoring.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textViewjenismonitoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_jenis_monitoring"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/TipeTX"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioisinama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/fragment_main_isi_nama" />

        <RadioButton
            android:id="@+id/radiogabung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_main_gabung" />

        <RadioButton
            android:id="@+id/radiocetakfaktur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_main_cetak_faktur" />
    </RadioGroup>

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_tanggal_tx"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/TipeTX"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/SubmitLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextdatetx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/submit_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/submit_button"
            android:ems="10"
            android:hint="@string/fragment_main_tanggal_tx_hint"
            android:inputType="date" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"            
            android:text="@string/button_submit" />
    </RelativeLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
